--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@ Optional (if you have time)<br />
 
 <div id="input_fields">
 
-<form id="formA" onsubmit="return validateForm()" method="post" >
+<form id="formA" onsubmit="return validateForm()" >
 
 <label for="title">Title: </label>
       <input type="text" id="title" autofocus="" required />
